@@ -12,7 +12,6 @@
  */
 package com.netflix.conductor.core.execution.mapper;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -69,8 +68,8 @@ public class UserDefinedTaskMapper implements TaskMapper {
 
         LOGGER.debug("TaskMapperContext {} in UserDefinedTaskMapper", taskMapperContext);
 
-        WorkflowTask taskToSchedule = taskMapperContext.getTaskToSchedule();
-        WorkflowModel workflowInstance = taskMapperContext.getWorkflowInstance();
+        WorkflowTask workflowTask = taskMapperContext.getWorkflowTask();
+        WorkflowModel workflowModel = taskMapperContext.getWorkflowModel();
         String taskId = taskMapperContext.getTaskId();
         int retryCount = taskMapperContext.getRetryCount();
 
@@ -80,43 +79,30 @@ public class UserDefinedTaskMapper implements TaskMapper {
                                 () ->
                                         Optional.ofNullable(
                                                         metadataDAO.getTaskDef(
-                                                                taskToSchedule.getName()))
+                                                                workflowTask.getName()))
                                                 .orElseThrow(
                                                         () -> {
                                                             String reason =
                                                                     String.format(
                                                                             "Invalid task specified. Cannot find task by name %s in the task definitions",
-                                                                            taskToSchedule
-                                                                                    .getName());
+                                                                            workflowTask.getName());
                                                             return new TerminateWorkflowException(
                                                                     reason);
                                                         }));
 
         Map<String, Object> input =
                 parametersUtils.getTaskInputV2(
-                        taskToSchedule.getInputParameters(),
-                        workflowInstance,
-                        taskId,
-                        taskDefinition);
+                        workflowTask.getInputParameters(), workflowModel, taskId, taskDefinition);
 
-        TaskModel userDefinedTask = new TaskModel();
-        userDefinedTask.setTaskType(taskToSchedule.getType());
-        userDefinedTask.setTaskDefName(taskToSchedule.getName());
-        userDefinedTask.setReferenceTaskName(taskToSchedule.getTaskReferenceName());
-        userDefinedTask.setWorkflowInstanceId(workflowInstance.getWorkflowId());
-        userDefinedTask.setWorkflowType(workflowInstance.getWorkflowName());
-        userDefinedTask.setCorrelationId(workflowInstance.getCorrelationId());
-        userDefinedTask.setScheduledTime(System.currentTimeMillis());
-        userDefinedTask.setTaskId(taskId);
+        TaskModel userDefinedTask = taskMapperContext.createTaskModel();
         userDefinedTask.setInputData(input);
         userDefinedTask.setStatus(TaskModel.Status.SCHEDULED);
         userDefinedTask.setRetryCount(retryCount);
-        userDefinedTask.setCallbackAfterSeconds(taskToSchedule.getStartDelay());
-        userDefinedTask.setWorkflowTask(taskToSchedule);
-        userDefinedTask.setWorkflowPriority(workflowInstance.getPriority());
+        userDefinedTask.setCallbackAfterSeconds(workflowTask.getStartDelay());
         userDefinedTask.setRateLimitPerFrequency(taskDefinition.getRateLimitPerFrequency());
         userDefinedTask.setRateLimitFrequencyInSeconds(
                 taskDefinition.getRateLimitFrequencyInSeconds());
-        return Collections.singletonList(userDefinedTask);
+
+        return List.of(userDefinedTask);
     }
 }
